--- a/frontend/src/css/main_page.css
+++ b/frontend/src/css/main_page.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-right: 540px;
 }
 .nav {
   font-family: Arial, Helvetica, sans-serif;
